Lesson 5: add web and api auth
