# app/Http/Controllers/Web/AuthController.php
@@ -1,0 +1,65 @@
+<?php
+
+namespace App\Http\Controllers\Web;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\LoginRequest;
+use App\Http\Requests\RegisterRequest;
+use App\Models\User;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
+
+class AuthController extends Controller
+{
+    public function registerForm()
+    {
+        return view('user.register');
+    }
+
+    public function register(RegisterRequest $request)
+    {
+        User::create([
+            'name' => $request->input('name'),
+            'email' => $request->input('email'),
+            'password' => Hash::make($request->input('password'))
+        ]);
+
+        Auth::attempt($request->validated(), true);
+
+        return redirect(route('profile'));
+    }
+
+    public function loginForm()
+    {
+        return view('user.login');
+    }
+
+    public function login(LoginRequest $request)
+    {
+        if (Auth::attempt($request->validated(), true)) {
+            $request->session()->regenerate();
+
+            return redirect('profile');
+        }
+
+        return back()->with([
+            'email' => 'invalid'
+        ]);
+    }
+
+    public function logout(Request $request)
+    {
+        Auth::logout();
+
+        $request->session()->invalidate();
+        $request->session()->regenerateToken();
+
+        return redirect(route('login.form'));
+    }
+
+    public function profile()
+    {
+        return view('user.profile');
+    }
+}
